--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/liatrio-app:${{ github.sha }} .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/liatrio-api-hub:${{ github.sha }} .
 
       - name: Run Liatrio apprentice verification
         uses: liatrio/apprentice-action@v1
 
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/liatrio-app:${{ github.sha }}
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/liatrio-api-hub:${{ github.sha }}
