--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,32 +4,36 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
 
 jobs:
-  build-test-push:
+  build_test_push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Build Docker image
+        run: |
+          docker build -t app:${{ github.sha }} .
+
+      - name: Run container on port 80
+        run: |
+          docker run -d --name app -p 80:3000 app:${{ github.sha }}
+
+      - name: Verify with apprentice-action
+        uses: liatrio/github-actions/apprentice-action@master
 
       - name: Log in to Docker Hub
+        if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Docker image
+      - name: Push image to Docker Hub
+        if: github.ref == 'refs/heads/main'
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/liatrio-api-hub:${{ github.sha }} .
-
-      - name: Run Liatrio apprentice verification
-        uses: liatrio/apprentice-action@v1
-
-      - name: Push Docker image
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/liatrio-api-hub:${{ github.sha }}
+          IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/liatrio-api-hub
+          docker tag app:${{ github.sha }} $IMAGE:${{ github.sha }}
+          docker push $IMAGE:${{ github.sha }}
