--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           docker run -d --name app -p 80:8080 app:${{ github.sha }}
 
       - name: Verify with apprentice-action
-        uses: liatrio/github-actions/apprentice-action@master
+        uses: liatrio/github-actions/apprentice-action@v1.0.0
 
       - name: Log in to Docker Hub
         if: github.ref == 'refs/heads/main'
